--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -12,9 +12,9 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title data-t="title_archive_accounts">Archivio Account - PROTOCOLLO BASE V5.0</title>
 
-    <!-- PWA / Mobile Capable -->
+    <link rel="icon" type="image/jpeg" href="assets/images/app-icon.jpg">
     <link rel="manifest" href="manifest.json?v=5.0" />
-    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.jpg">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
