--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -12,8 +12,9 @@
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>Codici & Password - Accedi</title>
 
+    <link rel="icon" type="image/jpeg" href="assets/images/app-icon.jpg">
     <link rel="manifest" href="manifest.json?v=3.9.1" />
-    <link rel="apple-touch-icon" sizes="192x192" href="./assets/images/app-icon.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="./assets/images/app-icon.jpg">
 
 
 
