--- a/Frontend/public/dettaglio_account_azienda.html
+++ b/Frontend/public/dettaglio_account_azienda.html
@@ -21,6 +21,7 @@
     <!-- Design System Master (PROTOCOLLO V5.0) -->
     <link rel="stylesheet" href="assets/css/core.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_fascie.css">
+    <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
     <link rel="stylesheet" href="assets/css/dettaglio_account_azienda.css?v=5.0">
 
     <!-- CORE JS -->
