--- a/Frontend/public/lista_aziende.html
+++ b/Frontend/public/lista_aziende.html
@@ -1,63 +1,62 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" data-i18n="loading">
 
 <head>
+    <!-- Anti-flicker & Theme Master (V5.0) - DEVE essere il PRIMO script -->
+    <script src="assets/js/theme-init.js"></script>
+    <!-- CSP (Content Security Policy) - V5.0 Standard -->
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com; style-src 'self' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
+        content="default-src 'self' https://*.firebaseapp.com https://*.googleapis.com; script-src 'self' https://*.firebaseapp.com https://apis.google.com https://www.googletagmanager.com https://www.gstatic.com https://cdnjs.cloudflare.com 'sha256-vvt4KWwuNr51XfE5m+hzeNEGhiOfZzG97ccfqGsPwvE='; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://*; connect-src 'self' https://*.googleapis.com https://*.firebaseio.com https://www.gstatic.com wss://*.firebaseio.com; frame-src 'self' https://*.firebaseapp.com https://www.gstatic.com;">
     <meta charset="utf-8" />
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Le Mie Aziende - PROTOCOLLO BASE V3.7</title>
+    <title data-t="my_companies">Le Mie Aziende - PROTOCOLLO BASE</title>
 
     <!-- PWA / Mobile Capable -->
-    <link rel="manifest" href="manifest.json?v=5.3" />
-    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.png">
+    <link rel="icon" type="image/jpeg" href="assets/images/app-icon.jpg">
+    <link rel="manifest" href="manifest.json?v=3.4" />
+    <link rel="apple-touch-icon" sizes="192x192" href="assets/images/app-icon.jpg">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <!-- Design System Master (PROTOCOLLO V5.0) -->
-    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
+    <!-- CSS Stratificato (V5.0 compliant) -->
     <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_fascie.css">
     <link rel="stylesheet" href="assets/css/core_pagine.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_ui.css?v=5.0">
-    <link rel="stylesheet" href="assets/css/moduli.css?v=5.0">
-    <link rel="stylesheet" href="assets/css/lista_aziende.css?v=5.0">
-    <script src="assets/js/theme-init.js"></script>
+    <link rel="stylesheet" href="assets/css/lista_aziende.css?v=5.1">
 </head>
 
 <body class="base-bg">
-    <!-- Script moved to HEAD -->
-    <div class="base-container relative">
-        <!-- Ambient Glow -->
+    <!-- 1. BASE CONTAINER (Design System V5.0) -->
+    <div class="base-container">
+        <!-- 2. BASE GLOW (Ambience Effect) -->
         <div class="base-glow"></div>
 
-        <!-- Automated Header -->
+        <!-- 3. HEADER (Placeholder - popolato da components.js) -->
         <header id="header-placeholder" class="base-header"></header>
 
+        <!-- 4. MAIN CONTENT -->
         <main class="base-main">
             <div class="page-container pt-header-extra pb-footer-extra">
-                <div class="flex-col-gap-6">
-                    <!-- Companies List Container -->
-                    <div id="aziende-list-container" class="matrix-grid aziende-grid-gap">
-                        <!-- Loading Spinner -->
-                        <div class="col-span-full flex-center-col py-20 opacity-20">
-                            <span class="material-symbols-outlined text-4xl animate-pulse">sync</span>
-                            <p class="text-[10px] font-black uppercase tracking-widest mt-4" data-t="loading_data">
-                                Ricezione
-                                Dati...</p>
-                        </div>
+                <!-- Aziende List Container -->
+                <div id="aziende-list-container" class="aziende-grid">
+                    <!-- Loading Spinner (rimosso via JS al caricamento) -->
+                    <div class="loading-placeholder">
+                        <span class="material-symbols-outlined loading-icon">sync</span>
+                        <p class="loading-text" data-t="loading_data">Ricezione Dati...</p>
                     </div>
                 </div>
             </div>
         </main>
 
-        <!-- FOOTER PLACEHOLDER -->
+        <!-- 5. FOOTER PLACEHOLDER -->
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
-    <!-- Scripts -->
+    <!-- Main JS Orchestrator (V5.0) -->
     <script type="module" src="assets/js/main.js"></script>
 
 </body>
