fix(dettaglio): modal allegati + banking prompt light/dark mode colors

--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -190,7 +190,7 @@
                         </div>
                         <div id="attachments-list" class="flex-col-gap content-spacing">
                             <!-- Injected via JS -->
-                            <p class="text-[10px] text-white/20 uppercase text-center py-4">Nessun allegato</p>
+                            <p class="empty-attachments-text">Nessun allegato</p>
                         </div>
                     </section>
 
