fix(mobile): prevent accidental reload on file select (type=button) + input reset logic

--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -240,17 +240,17 @@
             <h3 class="modal-source-title">Seleziona Sorgente</h3>
 
             <div class="source-grid">
-                <button class="btn-source-option" data-source="camera">
+                <button type="button" class="btn-source-option" data-source="camera">
                     <span class="material-symbols-outlined">photo_camera</span>
                     <span class="btn-source-label">Camera</span>
                 </button>
 
-                <button class="btn-source-option" data-source="gallery">
+                <button type="button" class="btn-source-option" data-source="gallery">
                     <span class="material-symbols-outlined">collections</span>
                     <span class="btn-source-label">Galleria</span>
                 </button>
 
-                <button class="btn-source-option btn-source-wide" data-source="file">
+                <button type="button" class="btn-source-option btn-source-wide" data-source="file">
                     <span class="material-symbols-outlined">description</span>
                     <span class="btn-source-label">Documento</span>
                 </button>
