fix(mobile-upload): huge refactor - replaced JS click with native <label> for robust mobile file picker opening + automatic modal close

--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -240,20 +240,20 @@
             <h3 class="modal-source-title">Seleziona Sorgente</h3>
 
             <div class="source-grid">
-                <button type="button" class="btn-source-option" data-source="camera">
+                <label for="input-camera" class="btn-source-option cursor-pointer" data-source="camera">
                     <span class="material-symbols-outlined">photo_camera</span>
                     <span class="btn-source-label">Camera</span>
-                </button>
+                </label>
 
-                <button type="button" class="btn-source-option" data-source="gallery">
+                <label for="input-gallery" class="btn-source-option cursor-pointer" data-source="gallery">
                     <span class="material-symbols-outlined">collections</span>
                     <span class="btn-source-label">Galleria</span>
-                </button>
+                </label>
 
-                <button type="button" class="btn-source-option btn-source-wide" data-source="file">
+                <label for="input-file" class="btn-source-option btn-source-wide cursor-pointer" data-source="file">
                     <span class="material-symbols-outlined">description</span>
                     <span class="btn-source-label">Documento</span>
-                </button>
+                </label>
             </div>
 
             <div class="modal-footer">
